Removed auth details

--- a/src/app/otp-db-title-lookup/otp-db-title-lookup.component.css
+++ b/src/app/otp-db-title-lookup/otp-db-title-lookup.component.css
@@ -20,7 +20,7 @@ li {
 
 a {
     text-decoration: none;
-    color: tomato;
+    color: '#008100';
 }
 
 a:hover{
@@ -28,5 +28,5 @@ a:hover{
 }
 
 a:visited {
-    color: tomato;
+    color: '#008100';
 }
