--- a/src/app/big-comm-sku-list/big-comm-sku-list.component.css
+++ b/src/app/big-comm-sku-list/big-comm-sku-list.component.css
@@ -42,7 +42,7 @@ li {
 
 a {
     text-decoration: none;
-    color:green;
+    color:'#008100';
 }
 
 a:hover{
@@ -50,7 +50,7 @@ a:hover{
 }
 
 a:visited {
-    color:green;
+    color:'#008100';
 }
 
 #allLinks {
