--- a/src/app/otp-db-title-lookup/otp-db-title-lookup.component.html
+++ b/src/app/otp-db-title-lookup/otp-db-title-lookup.component.html
@@ -1,2 +1,2 @@
-<li id="col1">{{product.id}}</li><li id="col2">{{product.sku}}</li><li id="col3"><a href="https://{{lookupURL}}">{{lookupURL}}</a></li>
-<app-url-response-check [url]="lookupURL" [linkCheckStatus]="linkCheckStatus"></app-url-response-check>
+<li id="col1">{{product.id}}</li><li id="col2">{{product.sku}}</li><li id="col3"><a [ngStyle]="{'color': urlExists}" href="https://{{lookupURL}}">{{lookupURL}}</a></li>
+<app-url-response-check *ngIf="show" [url]="lookupURL" [linkCheckStatus]="linkCheckStatus"></app-url-response-check>
